# fusion360gallery-to-build123d

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/: curve_type.py  f360_to_b123d.py
tests/: f360_to_b123d_test.py
tests/mock_data/: mock_data_f360.py
